Fixed: Fullwidth simple page layout doesn't scroll + Added: New logo to the various pages + Fixed: Mobile zoom is not disabled + Fixed: Profile timeline mobile order is not correct + Fixed: Quickpanel focusses to the form elements causing it to scroll on mobile devices when opened + Various demo page mobile fixes

--- a/src/app/main/content/pages/authentication/register-2/register-2.component.scss
+++ b/src/app/main/content/pages/authentication/register-2/register-2.component.scss
@@ -17,15 +17,7 @@
 
             .logo {
                 width: 128px;
-                height: 128px;
-                line-height: 128px;
-                font-size: 86px;
-                font-weight: 500;
                 margin-bottom: 32px;
-                color: #FFFFFF;
-                border-radius: 2px;
-                text-align: center;
-                background: mat-color($accent);
             }
 
             .title {
