--- a/src/app/main/content/pages/invoices/modern/modern.component.scss
+++ b/src/app/main/content/pages/invoices/modern/modern.component.scss
@@ -35,8 +35,6 @@
 
                                 .logo {
                                     width: 156px;
-                                    height: 156px;
-                                    font-size: 115px;
                                 }
                             }
 
@@ -154,12 +152,7 @@
                         .logo {
                             width: 32px;
                             min-width: 32px;
-                            height: 32px;
-                            font-size: 17px;
-                            font-weight: 500;
                             margin-right: 24px;
-                            border-radius: 2px;
-                            overflow: hidden;
                         }
 
                         .small-note {
@@ -205,8 +198,6 @@
 
                                     .logo {
                                         width: 60pt;
-                                        height: 60pt;
-                                        font-size: 40pt;
                                     }
                                 }
 
